--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "orsini",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,6 +10,7 @@
   "dependencies": {
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.11"
   }
 }
