--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "recharts": "^2.1.9",
     "sass": "^1.49.11",
     "typescript": "^4.6.3"
   }
