--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "recharts": "^2.1.9",
     "sass": "^1.49.11",
+    "socket.io-client": "^4.5.1",
     "typescript": "^4.6.3"
   }
 }
